fix: fixed children to parent linking with uid